k8s/shinysim/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shinysim-svc
  namespace: shinysim
  labels:
    app: shinysim
spec:
  type: NodePort
  selector:
    app: shinysim
  ports:
    - port: 3000
      targetPort: 3000
