k8s/shinysim/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shinysim-ingress
  namespace: shinysim
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shine.cjcocokrisp.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shinysim-svc
            port:
              number: 3000
